--- a/root/indexSGDS.html
+++ b/root/indexSGDS.html
@@ -20,8 +20,8 @@
                 </a>
                 <ul class="ul">
                     <li><a href="SobreSGDS.html" class="btn">Sobre nós</a></li>
-                    <li><a href="pages/Cadastro.html" class="btn">Login</a></li>
-                    <li><a href="/sgds/PHP/Cadastro.php" class="btn">Cadastro</a></li>
+                    <li><a href="../PHP/Cadastro.php" class="btn">Login</a></li>
+                    <li><a href="../PHP/Cadastro.php" class="btn">Cadastro</a></li>
                 </ul>
             </nav>
         </div>
